# insightboost

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: API.md  CONTRIBUTING.md
src/insightboost/: __init__.py
src/insightboost/api/: __init__.py  anthropic_client.py  rate_limiter.py
src/insightboost/config/: __init__.py  logging_config.py  settings.py
src/insightboost/core/: __init__.py  data_analyzer.py  insights_generator.py  visualization_suggester.py
src/insightboost/models/: __init__.py  dataset.py  insight.py  user.py  visualization.py
src/insightboost/utils/: __init__.py  exceptions.py  formatters.py  validators.py
src/insightboost/web/: __init__.py  app.py
src/insightboost/web/routes/: __init__.py  collaboration.py  insights.py  visualizations.py
src/insightboost/web/static/css/: styles.css
src/insightboost/web/static/js/: app.js  collaboration.js  datatable.js  visualizations.js
src/insightboost/web/templates/: analysis.html  base.html  collaborate.html  dashboard.html
src/insightboost/web/templates/components/: dataset_card.html  empty_state.html  insight_card.html  loading.html  viz_card.html
tests/: __init__.py  conftest.py
tests/fixtures/sample_datasets/: customer_segments.csv  financial_metrics.csv  mixed_quality.csv  sales_data.csv  sensor_readings.csv
tests/integration/: __init__.py  test_web_routes.py
tests/unit/: __init__.py  test_anthropic_client.py  test_data_analyzer.py  test_insights_generator.py  test_visualization_suggester.py
